--- a/FrontEnd/Statics/CSS/Styles.css
+++ b/FrontEnd/Statics/CSS/Styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-    --body: #f0f0f0;
+    --body: #dddddd;
     --morado-oscuro: #071952;
     --morado-medio: #0B666A;
     --morado-normal: #35A29F;
@@ -17,6 +17,10 @@
 
 body{
     background-color: var(--body);
+    overflow-x: hidden;
+    /* display: flex; */
+    flex-direction: row;
+    margin-left: 120px;
 }
 
 .menu-dash{
@@ -24,7 +28,13 @@ body{
     height: 100vh;
     background: var(--morado-medio);
     padding: 20px;
-    transition: max-width.3s ease;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    transition: max-width 0.3s ease, transform 0.3s ease;
+    transform: translateX(0);
+    flex: 0 0 120px;
 }
 
 .menu-dash span{
@@ -33,6 +43,8 @@ body{
 
 .menu-dash.open{
     max-width: 300px;
+    transform: translateX(0);
+    flex: 0 0 300px;
 }
 
 .top-menu{
